# norgesgruppen_ai_vision

./: .gcloudignore  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  TASKS-core.md  TASKS-feature.md  TASKS-qa.md  TASKS.md  cloudbuild.yaml  pyproject.toml  run.py
.claude/: settings.json
.claude/agents/: inference-agent.md  model-agent.md  trainer-agent.md
.claude/hooks/: pre-commit.sh  security-imports.sh
.claude/skills/benchmark-inference/: SKILL.md
.claude/skills/validate-submission/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
docs/: battle_plan_final.md  benchmark_results.md  classification_strategy.md  execution_plan.md  final_4_shots.md  final_plan.md  hail_mary_plan.md  label_review.html  label_tasks.json  labeler.html  last_3_shots.md  morning_plan.md  overnight_research.md  overnight_training_plan.md  professor_review_sat.md  project_overview_notebooklm.md  strategy_plan.md  tomorrow_3_shots.md
scripts/: apply_label_corrections.py  check_jobs.sh  coco_to_yolo.py  convert_product_images.py  create_submission.py  create_submission.sh  download_dataset.sh  download_weights.sh  eval_full_pipeline.py  eval_offline.py  generate_label_tasks.py  generate_label_tasks_nogpu.py  launch_all_training.sh  launch_eval.sh  launch_training.sh  precompute_prototypes.py  review_labels.py  sweep_thresholds.py  validate_submission.sh
src/: constants.py  prototype_matcher.py
tests/: conftest.py  test_constants.py  test_output_format.py  test_placeholder.py  test_prototype_matcher.py  test_run.py  test_security.py
training/: Dockerfile  data-local.yaml  data.yaml  train.py  train_classifier.py  vertex-job-classifier.yaml  vertex-job-rtdetr-l-640.yaml  vertex-job-rtdetr-x-640.yaml  vertex-job-t4-dws.yaml  vertex-job-yolov8l-1280.yaml  vertex-job-yolov8l-640.yaml  vertex-job-yolov8m-1280.yaml  vertex-job-yolov8m-640.yaml  vertex-job-yolov8x-1280.yaml  vertex-job-yolov8x-640.yaml
